force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Burndown_Item__c/agf__ADM_Release_Burndown_Item__c.object-meta.xml
<CustomObject>
    <description>Used to save data for generating the release burndown chart.</description>
    <label>Release Burndown Item</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Release Burndown Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Burndown Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>