force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Burndown_Item__c/fields/agf__Story_Points__c.field-meta.xml
<CustomField>
    <fullName>agf__Story_Points__c</fullName>
    <label>Story Points</label>
    <precision>12</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>