force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Burndown_Item__c/fields/agf__Team_Release__c.field-meta.xml
<CustomField>
    <fullName>agf__Team_Release__c</fullName>
    <label>Team Release</label>
    <referenceTo>agf__ADM_Team_Release__c</referenceTo>
    <relationshipName>Release_Burndown_Item_2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>