force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Burndown_Item__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>agf__Story_Points__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>agf__Date__c</columns>
    <columns>agf__Team_Release__c</columns>
    <columns>agf__Type__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>